--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>Grady Brown's Portfolio</h1>
 <p>CIS 161 Google Doc Sheet</p>
-    <a href="https://docs.google.com/document/d/12q3FVvs1i77wiO-nVPN2UvB9OZEx635vNogqwMPGLUo/edit?usp=sharing"> </a>
+    <a href="https://docs.google.com/document/d/12q3FVvs1i77wiO-nVPN2UvB9OZEx635vNogqwMPGLUo/edit?usp=sharing"> LINK </a>
 </body>
 </html>
 
